centered job title text on small screens

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                         <h1 class="float-sm-right text-sm-right mt-3 display-5">{{job.date}}</h1>
                     </div>
                     <div class="clear">
-                        <p class="lead">{{job.title}}</p>
+                        <p class="lead text-center text-sm-left">{{job.title}}</p>
                     </div>
                     <div class="clear">
                         <ul class="list-group">
